--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.ts",
   "license": "MIT",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^22.13.14",
     "typescript": "^5.8.2"
   },
@@ -14,9 +15,11 @@
   "type": "module",
   "dependencies": {
     "@fastify/cors": "^11.0.1",
+    "@fastify/jwt": "^9.1.0",
     "@prisma/client": "^6.6.0",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
-    "fastify": "^5.2.2",
+    "fastify": "^5.3.2",
     "prisma": "^6.6.0",
     "socket.io": "^4.8.1"
   },
