--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^22.13.14",
+    "tsx": "^4.19.4",
     "typescript": "^5.8.2"
   },
   "scripts": {
     "start": "tsc && node dist/index.js",
-    "build": "tsc"
+    "build": "tsc",
+    "dev": "tsx watch src/index.ts"
   },
   "type": "module",
   "dependencies": {
