--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^22.13.14",
+    "@types/nodemailer": "^6.4.17",
     "tsx": "^4.19.4",
     "typescript": "^5.8.2"
   },
@@ -22,6 +23,7 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "fastify": "^5.3.2",
+    "nodemailer": "^7.0.3",
     "prisma": "^6.6.0",
     "socket.io": "^4.8.1"
   },
