--- a/package.json
+++ b/package.json
@@ -4,31 +4,21 @@
   "main": "index.ts",
   "license": "MIT",
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
     "@types/node": "^22.13.14",
-    "@types/nodemailer": "^6.4.17",
-    "tsx": "^4.19.4",
     "typescript": "^5.8.2"
   },
   "scripts": {
     "start": "tsc && node dist/index.js",
-    "build": "tsc",
-    "dev": "tsx watch src/index.ts"
+    "build": "tsc"
   },
   "type": "module",
   "dependencies": {
     "@fastify/cors": "^11.0.1",
-    "@fastify/jwt": "^9.1.0",
     "@prisma/client": "^6.6.0",
-    "@scaleway/random-name": "^5.1.1",
-    "bcrypt": "^5.1.1",
-    "dotenv": "^16.5.0",
-    "fastify": "^5.3.2",
-    "nodemailer": "^7.0.3",
+    "dotenv": "^16.4.5",
+    "fastify": "^5.2.2",
     "prisma": "^6.6.0",
-    "socket.io": "^4.8.1",
-    "title-case": "^4.3.2",
-    "uuid": "^11.1.0"
+    "socket.io": "^4.8.1"
   },
   "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
