--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
   "scripts": {
     "start": "tsc && node dist/index.js",
     "build": "tsc",
-    "dev": "tsx watch src/index.ts"
+    "dev": "tsx src/index.ts"
   },
   "type": "module",
   "dependencies": {
     "@fastify/cors": "^11.0.1",
     "@fastify/jwt": "^9.1.0",
+    "@fastify/static": "^8.1.1",
     "@prisma/client": "^6.6.0",
     "@scaleway/random-name": "^5.1.1",
     "bcrypt": "^5.1.1",
@@ -30,5 +31,5 @@
     "title-case": "^4.3.2",
     "uuid": "^11.1.0"
   },
-  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
+  "packageManager": "yarn@4.9.1"
 }
